<resources>
    <string name="app_name">FixFlow</string>
    <string name="issue_title">Issue Title</string>
    <string name="checklist_step">Checklist Step</string>
    <string name="case_name">Case Name</string>
    <string name="user_login">User Login</string>
    <string name="admin_login">Admin Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="ncpb_logo">NCPB logo</string>
    <string name="fixflow">FixFlow</string>
    <string name="add_case">Add Case</string>
    <string name="enter_issue_name">Enter Issue Name</string>
    <string name="submit">Submit</string>
    <string name="enter_checklist_step">Enter Checklist Step</string>
    <string name="enter_case_name">Enter Case Name</string>
    <string name="active_cases">Active Cases</string>
    <string name="resolved_cases">Resolved Cases</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="new_case">New Case</string>
    <string name="case_title">Case Title</string>
    <string name="case_description">Description</string>
    <string name="priority">Priority Level</string>
    <string name="category">Category</string>
    <string name="submit_case">Submit Case</string>
    <string name="report_issue">Report Issue</string>
    <string name="issue_description">Description</string>
    <string name="severity">Severity Level</string>
    <string name="add_attachments">Attachments</string>
    <string name="add_screenshot">Add Screenshot</string>
    <string name="submit_issue">Submit Issue</string>
    <string name="create_checklist">Create Checklist</string>
    <string name="checklist_title">Checklist Title</string>
    <string name="add_step">Add Step</string>
    <string name="save_checklist">Save Checklist</string>
    <string name="add_issue">Add Issue</string>
    <string name="case_issues">Case Issues</string>
    <string name="issue_date">Issue Date</string>
    <string name="status_open">Status Open</string>
    <string name="delete_step">Delete Step</string>
    <string name="new_checklist">New Checklist</string>
    <string name="save">Save</string>
    <string name="new_issue">New Issue</string>
</resources>